--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "bootstrap": "^5.1.3",
     "firebase": "^8.2.0",
     "next": "12.0.7",
+    "nodemailer": "^6.9.3",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-otp-input": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
